--- a/cluster/docker-compose.yml
+++ b/cluster/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "2181:2181"
     hostname: zookeeper
 
-  kafka1:
+  broker1:
     image: "wurstmeister/kafka"
     command: [start-kafka.sh]
     ports:
@@ -17,7 +17,7 @@ services:
       # Comma-separated list of listeners, and the host/ip and port to which Kafka binds to on which to listen
       - "KAFKA_LISTENERS=EXTERNAL_LISTENER://:9092,INTERNAL_LISTENER://:19092"
       # This is the metadata that’s passed back to clients
-      - "KAFKA_ADVERTISED_LISTENERS=EXTERNAL_LISTENER://localhost:9092,INTERNAL_LISTENER://kafka1:19092"
+      - "KAFKA_ADVERTISED_LISTENERS=EXTERNAL_LISTENER://localhost:9092,INTERNAL_LISTENER://broker1:19092"
       # Defines key/value pairs for the security protocol to use, per listener name
       - "KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=EXTERNAL_LISTENER:PLAINTEXT,INTERNAL_LISTENER:PLAINTEXT"
       # This is the preferred listeners for internal broker communication
@@ -27,7 +27,7 @@ services:
     depends_on:
       - "zookeeper"
 
-  kafka2:
+  broker2:
     image: "wurstmeister/kafka"
     command: [start-kafka.sh]
     ports:
@@ -36,7 +36,7 @@ services:
       # Comma-separated list of listeners, and the host/ip and port to which Kafka binds to on which to listen
       - "KAFKA_LISTENERS=EXTERNAL_LISTENER://:9093,INTERNAL_LISTENER://:19093"
       # This is the metadata that’s passed back to clients
-      - "KAFKA_ADVERTISED_LISTENERS=EXTERNAL_LISTENER://localhost:9093,INTERNAL_LISTENER://kafka2:19093"
+      - "KAFKA_ADVERTISED_LISTENERS=EXTERNAL_LISTENER://localhost:9093,INTERNAL_LISTENER://broker2:19093"
       # Defines key/value pairs for the security protocol to use, per listener name
       - "KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=EXTERNAL_LISTENER:PLAINTEXT,INTERNAL_LISTENER:PLAINTEXT"
       # This is the preferred listeners for internal broker communication
