Spring app works, test hangs

--- a/part5/kafkapp5/src/main/resources/application.yaml
+++ b/part5/kafkapp5/src/main/resources/application.yaml
@@ -1,2 +1,6 @@
-spring.kafka:
-  consumer.group-id: kafkapp5-group
+kafka:
+  bootstrap-servers: "localhost:9092"
+spring:
+  kafka:
+    consumer:
+      group-id: "kafka5"
