implement foreverloop separately

--- a/part5/kafkapp5/src/test/resources/application.yaml
+++ b/part5/kafkapp5/src/test/resources/application.yaml
@@ -3,4 +3,7 @@ kafka:
 spring:
   kafka:
     consumer:
+      bootstrap-servers: ${spring.embedded.kafka.brokers}
       group-id: "kafka5-test"
+    producer:
+      bootstrap-servers: ${spring.embedded.kafka.brokers}
