--- a/part5/kafkapp5/pom.xml
+++ b/part5/kafkapp5/pom.xml
@@ -14,6 +14,12 @@
 	<name>kafkapp5</name>
 	<description>Kafka demo project for Spring Boot</description>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
